got the initial changes script to change