@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.bbop.apollo</groupId>
     <artifactId>apollo</artifactId>
@@ -55,9 +56,9 @@
             <version>1.2</version>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.apache.tomcat.embed</groupId>-->
-            <!--<artifactId>tomcat-embed-core</artifactId>-->
-            <!--<version>7.0.53</version>-->
+        <!--<groupId>org.apache.tomcat.embed</groupId>-->
+        <!--<artifactId>tomcat-embed-core</artifactId>-->
+        <!--<version>7.0.53</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>org.mortbay.jetty</groupId>
@@ -112,6 +113,11 @@
             <artifactId>javassist</artifactId>
             <version>3.18.2-GA</version>
         </dependency>
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
     <repositories>
@@ -134,9 +140,9 @@
             </plugin>
 
             <!--<plugin>-->
-                <!--<groupId>org.apache.tomcat.maven</groupId>-->
-                <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
-                <!--<version>2.0</version>-->
+            <!--<groupId>org.apache.tomcat.maven</groupId>-->
+            <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
+            <!--<version>2.0</version>-->
             <!--</plugin>-->
 
 
@@ -150,36 +156,36 @@
             </plugin>
 
             <!--<plugin>-->
-                <!--<groupId>org.eclipse.jetty</groupId>-->
-                <!--<artifactId>jetty-maven-plugin</artifactId>-->
-                <!--<version>9.1.3.v20140225</version>-->
-                <!--<configuration>-->
-                    <!--<webApp>-->
-                        <!--<defaultsDescriptor>${basedir}/src/main/resources/webdefault.xml</defaultsDescriptor>-->
-                        <!--<contextPath>/dfghdfg</contextPath>-->
-                    <!--</webApp>-->
-                    <!--<classesDirectory>${basedir}/src/main/webapp/WEB-INF/classes</classesDirectory>-->
-                    <!--<webAppSourceDirectory>${basedir}/src/main/webapp</webAppSourceDirectory>-->
-                    <!--<connectors>-->
-                        <!--<connector implementation="org.eclipse.jetty.server.ServerConnector">-->
-                            <!--<port>8080</port>-->
-                            <!--<maxIdleTime>7000000</maxIdleTime>-->
-                        <!--</connector>-->
-                    <!--</connectors>-->
-                <!--</configuration>-->
+            <!--<groupId>org.eclipse.jetty</groupId>-->
+            <!--<artifactId>jetty-maven-plugin</artifactId>-->
+            <!--<version>9.1.3.v20140225</version>-->
+            <!--<configuration>-->
+            <!--<webApp>-->
+            <!--<defaultsDescriptor>${basedir}/src/main/resources/webdefault.xml</defaultsDescriptor>-->
+            <!--<contextPath>/dfghdfg</contextPath>-->
+            <!--</webApp>-->
+            <!--<classesDirectory>${basedir}/src/main/webapp/WEB-INF/classes</classesDirectory>-->
+            <!--<webAppSourceDirectory>${basedir}/src/main/webapp</webAppSourceDirectory>-->
+            <!--<connectors>-->
+            <!--<connector implementation="org.eclipse.jetty.server.ServerConnector">-->
+            <!--<port>8080</port>-->
+            <!--<maxIdleTime>7000000</maxIdleTime>-->
+            <!--</connector>-->
+            <!--</connectors>-->
+            <!--</configuration>-->
 
-                <!--<dependencies>-->
-                    <!--<dependency>-->
-                        <!--<groupId>org.ow2.asm</groupId>-->
-                        <!--<artifactId>asm</artifactId>-->
-                        <!--<version>5.0.2</version>-->
-                    <!--</dependency>-->
-                    <!--<dependency>-->
-                        <!--<groupId>org.ow2.asm</groupId>-->
-                        <!--<artifactId>asm-commons</artifactId>-->
-                        <!--<version>5.0.2</version>-->
-                    <!--</dependency>-->
-                <!--</dependencies>-->
+            <!--<dependencies>-->
+            <!--<dependency>-->
+            <!--<groupId>org.ow2.asm</groupId>-->
+            <!--<artifactId>asm</artifactId>-->
+            <!--<version>5.0.2</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+            <!--<groupId>org.ow2.asm</groupId>-->
+            <!--<artifactId>asm-commons</artifactId>-->
+            <!--<version>5.0.2</version>-->
+            <!--</dependency>-->
+            <!--</dependencies>-->
 
             <!--</plugin>-->
 
@@ -190,9 +196,12 @@
                 <configuration>
                     <port>8080</port>
                     <contextReloadable>true</contextReloadable>
+                    <systemProperties>
+                        <JAVA_OPTS>-Xms256m -Xmx1024m -XX:MaxPermSize=512m</JAVA_OPTS>
+                    </systemProperties>
                 </configuration>
             </plugin>
-        <!--</plugins>-->
+            <!--</plugins>-->
 
         </plugins>
     </build>
